tests/typing/bad/testfile-mutable-4.scala

class A() { def m(x: Int) { x = 2 } }
object Main { def main(args: Array[String]) { } }
